# minimon

./: .env  .gitignore  Cargo.toml  README.md  build.rs  build_deb.sh  changelog.Debian  copyright  gen_debian_control.py  minimonagent.service
DEBIAN/: control  postinst
benches/: my_benchmark.rs
src/: minimon.rs  minimonagent.rs
templates/: current.jinja  home.jinja  overview.jinja
