[package]
name = "minimonitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "minimonagent"
path = "src/minimonagent.rs"

[lib]
name = "minimonitor"
path = "src/minimon.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
itertools = "0.13.0"
minijinja = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.31.2"
bytesize = {version = "1.2.0", features = ["serde"]}
httparse = "1.9.4"
serde_json = "1.0.122"
axum = { version = "0.7.5", features = ["query"] }
tokio = { version = "1.39.2", features = ["full"] }
dotenv = "0.15.0"
clap = { version = "4.5.15", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
#opt-level = "z"  # Optimize for size.
lto = true
#target = "x86_64-unknown-linux-musl"

[[bench]]
name = "my_benchmark"
harness = false
